[package]
name = "udp_send_test"
version = "0.1.0"
authors = ["Torkel <torkel@voysys.se>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
glium = "0.25"
imgui = "0.2"
imgui-glium-renderer = "0.2"
imgui-sys = "0.2"
imgui-winit-support = "0.2"

[dependencies.winit]
version = "0.19"
features = ["icon_loading"]
