[package]
name = "udp_send_test"
version = "0.1.0"
authors = ["Torkel <torkel@voysys.se>"]
edition = "2018"

[dependencies]
anyhow = "1"
glium = "0.26"
imgui = "0.3"
imgui-glium-renderer = "0.3"
imgui-sys = "0.3"
imgui-winit-support = "0.3"
winit = "0.21"
image = "0.23"

[profile.release]
panic = "abort"

[profile.dev]
panic = "abort"
