[package]
name = "udp_send_test"
version = "0.2.0"
authors = ["Torkel <torkel@voysys.se>"]
edition = "2018"


[dependencies]
clipboard = "0.5"
glium = { version = "0.29", default-features = true }
image = "0.23"
imgui = "0.7.0"
imgui-glium-renderer = "0.7.0"
imgui-winit-support = "0.7.0"
anyhow = "1.0.38"